# healthcare-sim-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  NOTICE  README.md  TASK_CHECKLIST.md  experiment-unification-task.md  invariant-guardrails-task.docx  invariant-guardrails-task.md  pyproject.toml  ~$variant-guardrails-task.docx
.claude/: invariants.yaml
docs/: analytical_first_pass.md  design_principles.md  healthcare-sim-sdk-design-v2_1.md
examples/: 05_ml_binary_classifier.ipynb  07_results_and_analysis_dataset.ipynb  08_stroke_scenario_integration.ipynb  09_noshow_scenario.ipynb  10_scenario_template.ipynb  its_estimator_demonstration.ipynb  noshow_realistic_eval.ipynb
experiments/: catalog.json  catalog.py  noshow_evaluation.py  report.py  run_burden_analysis.py  run_noshow_evaluation.py  validate.py
notebooks/: 01_rng_partitioning.ipynb  02_state_and_clone.ipynb  03_discrete_time_engine.ipynb  04_step_purity_contract.ipynb  05_ml_binary_classifier.ipynb  06_ml_probability_model.ipynb  07_results_and_analysis_dataset.ipynb  08_stroke_scenario_integration.ipynb  09_noshow_scenario.ipynb  10_scenario_template.ipynb  noshow_evaluation.ipynb  noshow_realistic_eval.ipynb  sanity_checks.ipynb
reports/: noshow_targeted_reminders_proof_points.md  nurse_retention_sweep.md  threshold_explorer.html  trews_baseline_detection_sweep.md  vp_access_report.md
research/: README.md  educational_packet.md  synthesis_report.md
scripts/: check_core_modifications.py  check_invariants.py  check_no_bare_random.py  (+3 more)
(+203 files in other folders)
